--- a/http/index.html
+++ b/http/index.html
@@ -17,7 +17,9 @@
 
 <!-- Modernizr JS -->
 <script src="js/modernizr-2.6.2.min.js"></script>
-<!-- FOR IE9 below -->
+
+<!-- myjs -->
+<script src="js/myjs/signin.js"></script>
 
 </head>
 <body class="style-3">
@@ -28,22 +30,22 @@
     <div class="col-md-4 col-md-push-8"> 
       
       <!-- Start Sign In Form -->
-      <form action="#" class="fh5co-form animate-box" data-animate-effect="fadeInRight">
-        <h2>登录</h2>
+      <form class="fh5co-form animate-box" method="post" action="php/users_signin.php" data-animate-effect="fadeInRight">
+        <h2>用户登录</h2>
         <div class="form-group">
           <label for="username" class="sr-only">用户名</label>
-          <input type="text" class="form-control" id="username" placeholder="用户名" autocomplete="off">
+          <input type="text" class="form-control" name="username" id="username" placeholder="用户名" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="password" class="sr-only">密码</label>
-          <input type="password" class="form-control" id="password" placeholder="密码" autocomplete="off">
+          <input type="password" class="form-control" name="password" id="password" placeholder="密码" autocomplete="off">
         </div>
         <div class="form-group"> </div>
         <div class="form-group">
           <p>没有注册？ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="signup.html"> 去注册！</a></p>
         </div>
         <div class="form-group">
-          <input type="submit" value="登录" class="btn btn-primary">
+          <input type="submit"  onclick="return signin()" value="登录" class="btn btn-primary">
         </div>
       </form>
       <!-- END Sign In Form --> 
@@ -67,5 +69,6 @@
 <script src="js/jquery.waypoints.min.js"></script> 
 <!-- Main JS --> 
 <script src="js/main.js"></script>
+
 </body>
 </html>
