--- a/http/signup.html
+++ b/http/signup.html
@@ -38,42 +38,42 @@
     <div class="col-md-4 col-md-push-8"> 
       
       <!-- Start Sign In Form -->
-      <form action="#" class="fh5co-form animate-box" data-animate-effect="fadeInRight">
-        <h2>注册</h2>
+      <form method="post" action="php/users_signup.php" class="fh5co-form animate-box" data-animate-effect="fadeInRight">
+        <h2>用户注册</h2>
         <div class="form-group"> </div>
         <div class="form-group">
           <label for="username" class="sr-only">username</label>
-          <input type="text" class="form-control" id="username" placeholder="*用户名" autocomplete="off">
+          <input type="text" class="form-control" name="username" id="username" placeholder="*用户名" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="password" class="sr-only">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="*密码" autocomplete="off">
+          <input type="password" class="form-control" name="password" id="password" placeholder="*密码" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="re-password" class="sr-only">Re-type Password</label>
-          <input type="password" class="form-control" id="re-password" placeholder="*再次输入" autocomplete="off">
+          <input type="password" class="form-control" name="re-password" id="re-password" placeholder="*再次输入" autocomplete="off">
         </div>
         <div class="form-group"> </div>
         
         <div class="form-group">
           <label for="name" class="sr-only">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="*真实姓名" autocomplete="off">
+          <input type="text" class="form-control" name="name" id="name" placeholder="*真实姓名" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="tel" class="sr-only">tel</label>
-          <input type="tel" class="form-control" id="tel" placeholder="*电话" autocomplete="off">
+          <input type="tel" class="form-control" name="tel" id="tel" placeholder="*电话" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="userid" class="sr-only">userid</label>
-          <input type="tel" class="form-control" id="userid" placeholder="*身份证号" autocomplete="off">
+          <input type="tel" class="form-control" name="userid" id="userid" placeholder="*身份证号" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="licese" class="sr-only">licese</label>
-          <input type="tel" class="form-control" id="licese" placeholder="*驾驶证号" autocomplete="off">
+          <input type="tel" class="form-control" name="licese" id="licese" placeholder="*驾驶证号" autocomplete="off">
         </div>
         <div class="form-group">
           <label for="age" class="sr-only">age</label>
-          <input type="tel" class="form-control" id="age" placeholder="年龄" autocomplete="off">
+          <input type="tel" class="form-control" name="age" id="age" placeholder="*年龄" autocomplete="off">
         </div>
 
         <div class="form-group"> </div>
@@ -81,7 +81,7 @@
           <p>已经注册? &nbsp; &nbsp;&nbsp; &nbsp; <a href="index.html">登录</a></p>
         </div>
         <div class="form-group">
-          <input type="submit" onclick="signup()" value="注册" class="btn btn-primary">
+          <input type="submit" onclick="return signup()" value="注册" class="btn btn-primary">
         </div>
       </form>
       <!-- END Sign In Form --> 
