--- a/http/index.html
+++ b/http/index.html
@@ -52,11 +52,11 @@
       <div id="leftdev"></div>
     </div>
   </div>
-  <div class="row" style="padding-top: 60px; clear: both;">
+  <footer class="row" style="padding-top: 60px; clear: both;">
     <div class="col-md-12 text-center">
       <p><small>YangJunhuai&copy; All Rights Reserved. </small></p>
     </div>
-  </div>
+  </footer>
 </div>
 
 <!-- jQuery --> 
