--- a/http/admin/index.html
+++ b/http/admin/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group"> </div>
         <div class="form-group">
-          <p>没有注册？ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="signup.html"> 去注册！</a></p>
+          <p>没有注册？ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="../signup.html"> 去注册！</a></p>
         </div>
         <div class="form-group">
           <input type="submit"  onclick="return signin()" value="登录" class="btn btn-primary">
