--- a/http/signup.html
+++ b/http/signup.html
@@ -81,7 +81,7 @@
           <div class="form-group"> </div>
           <div class="form-group">
             <p>已经注册? &nbsp; &nbsp;&nbsp; &nbsp;
-              <a href="index.html">登录</a>
+              <a href="index.php">登录</a>
             </p>
           </div>
           <div class="form-group">
