--- a/http/admin/signup.html
+++ b/http/admin/signup.html
@@ -70,7 +70,7 @@
 
         <div class="form-group"> </div>
         <div class="form-group">
-          <p>已经注册? &nbsp; &nbsp;&nbsp; &nbsp; <a href="index.html">登录</a></p>
+          <p>已经注册? &nbsp; &nbsp;&nbsp; &nbsp; <a href="index.php">登录</a></p>
         </div>
         <div class="form-group">
           <input type="submit" onclick="return signup()" value="注册" class="btn btn-primary">
